--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,9 @@
 // Put any @imports here
 // See Readme for a list of supported ones
+@import 'Foundation';
 
 body {
   background: #e2ebf3;
+
+  
 }
